# tft-comp-analyzer

./: .env.example  .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  Makefile  README.md  README_ML.md  README_ML_TRAINING.md  demo_ml_tool.py  pyproject.toml  rxconfig.py  simple_working_test.py  start_ui.sh  streamlit_app.py  streamlit_app_ml.py  streamlit_app_mock.py  test_ui_tabs.py  tft  tft_agent_demo.py  tft_analyzer.py  tft_analyzer_simple.py  tft_chat.py
backend/: run_server.py
backend/app/: __init__.py  main.py
config/: settings.py
data/compositions/: tft15_compositions.json
data/meta_analysis/: meta_analysis_sample_20250914.json  tft15_accurate_set15_data_20250915_142205.json  tft15_complete_meta_data_20250915_112315.json  tft15_complete_traits_with_mighty_mech_20250915_133910.json  tft15_enhanced_with_compositions_20250915_161337.json  tft15_enhanced_with_compositions_20250915_171923.json  tft15_meta_data_20250914_185912.json  tft15_meta_data_20250914_191238.json  tft15_meta_data_20250914_222824.json  tft15_requests_html_extracted_20250915_120642.json
data/riot_meta_data/: tft_augments_20250914_233709.parquet  tft_augments_20250914_233852.parquet  tft_augments_20250914_234434.json  tft_champions_20250914_234548.json  tft_champions_20250914_234548.parquet  tft_data_summary_20250914_233709.json  tft_data_summary_20250914_233852.json  tft_data_summary_20250914_234021.json  tft_data_summary_20250914_234434.json  tft_data_summary_20250914_234548.json  tft_items_20250914_233709.parquet  tft_items_20250914_233852.json  tft_items_20250914_233852.parquet  tft_items_20250914_234021.json  tft_items_20250914_234021.parquet  tft_raw_data_20250914_233709.json  tft_raw_data_20250914_233852.json  tft_raw_data_20250914_234021.json  tft_raw_data_20250914_234434.json  tft_raw_data_20250914_234548.json  tft_traits_20250914_233709.parquet  tft_traits_20250914_233852.json  tft_traits_20250914_233852.parquet
demos/: demo_enhanced_cli.py  demo_ml_tool.py  tft_agent_demo.py
docs/: ML_TOOL_USAGE.md
examples/: meta_data_usage.py  test_metatft_integration.py
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
modern_ui/: modern_ui.py
reflex_app/: __init__.py  reflex_app.py  tft_app.py
reflex_ui/: reflex_ui.py
scripts/: auto_retrain_scheduler.py  debug_data_collection.py  enhance_meta_with_compositions.py  enhanced_js_web_scraper.py  extract_modern_meta_data.py  extract_modern_meta_data_web.py  extract_tft_web_data.py  extract_with_requests_html.py  fetch_riot_meta_data.py  find_earliest_set15.py  process_accurate_set15_data.py  quick_retrain.py  setup_24h_training.py  test_llm_with_mock_data.py  test_model.py  test_patch_filtering.py  train_model.py  train_model_24h.py  update_accurate_trait_mappings.py  update_complete_trait_data.py  update_comprehensive_meta_data.py  update_meta_data.py  update_trait_mappings_with_mighty_mech.py  validate_meta_data.py
simple_working_ui/: simple_working_ui.py
tft_reflex_app/: __init__.py  tft_reflex_app.py
tft_simple_app/: tft_simple_app.py
(+102 files in other folders)
