[project]
name = "tft-comp-analyzer"
version = "0.3.0"  # ML Model Approach
description = "ML-powered TFT Set 15 strategy advisor with agentic AI interface"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.0.40",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiohttp>=3.8.0",
    "streamlit>=1.28.0",
    # LangChain Dependencies for Agentic Model
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    # ML Dependencies
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scikit-learn>=1.3.0",
    "optuna>=3.0.0",
    "mlflow>=2.5.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    # Data Processing
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "joblib>=1.3.0",
    "polars>=0.20.0",
    # Computer Vision (for future screenshot analysis)
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    # ML Development
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "tensorboard>=2.13.0",
    "pytest-mock>=3.11.0",
]

# Make sure this is correct for your directory structure
[tool.hatch.build.targets.wheel]
packages = ["src/tft_analyzer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
